0.4.3:
Sam Lantinga - Wed Apr  4 17:18:22 PDT 2001
 * Updated for Simple DirectMedia Layer version 1.2.0
Sam Lantinga - Wed Apr  4 17:18:14 PDT 2001
 * Fixed audio stream detection in non-standard MPEG streams
Sam Lantinga - Wed Apr  4 16:42:53 PDT 2001
 * Fixed hang on rewind when stream header contains no timestamp
Andreas Kloeckner - Wed Apr  4 14:43:49 PDT 2001
 * SMPEG now uses the SDL_RWops file abstraction internally
Joe Drew - Wed Apr  4 13:40:44 PDT 2001
 * Fixed bug where the audio was not updating the current time
Michel Darricau - Wed Apr  4 13:31:40 PDT 2001
 * Added some changes for the popcorn MPEG library
Nicolas Vignal - Wed Apr  4 13:25:28 PDT 2001
 * Added smpeg.m4
Sam Lantinga - Wed Feb 21 16:24:46 PST 2001
 * SDL 1.2.0 supports 24 bpp displays, allow that in plaympeg
Sam Lantinga - Fri Feb  9 23:37:31 PST 2001
 * Ported to MacOS X - one line fix.  I love portable code! :)
   It's still unusably slow, but it works! :)
Sam Lantinga - Thu Feb  8 17:33:15 PST 2001
 * Fixed a hang playing invalid MPEG files
Matt Carlson - Fri Feb  2 18:13:08 PST 2001
 * Fixed memory leak when used with OpenAL
Sam Lantinga - Mon Jan  8 07:49:20 PST 2001
 * Return a non-zero status from plaympeg if playback fails
James Boucher - Mon Jan  8 06:53:31 PST 2001
 * Changes to compile correctly on QNX RTP
Sam Lantinga - Thu Dec 21 10:52:28 PST 2000
 * Fixed SMPEG_renderFinal() to a different display surface
Stephane Peter - Thu, 21 Dec 2000 02:07:07 -0800 (PST)
 * Fixed plaympeg fullscreen toggling for multiple videos
Vivien Chappelier - Thu Dec 14 16:21:32 PST 2000
 * Fixed MPEGSystem::TotalTime() hanging on small files
 * Fixed system header decoding (caused misdetection of system streams)
 * Added bilinear filter toggling with the 'f' key in plaympeg
Maxim Sobolev - Mon Dec 11 11:54:46 PST 2000
 * Use the correct SDL configuration script on FreeBSD

0.4.2:
Sam Lantinga - Thu Dec  7 18:14:14 PST 2000